--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p class="ttl-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Dicta illum omnis sint cupiditate nostrum beatae ex, 
             sapiente dolore exercitationem nulla.</p>
-        <a href="#galeria" class="boton boton-galeria">Galería</a>
+        <a id="gale" href="#galeria" class="boton boton-galeria">Galería</a>
     </header>
 
     <figure id="photo1">
@@ -79,8 +79,8 @@
             <li><a href=""></a></li>
             <li><a href=""></a></li>
 
-            <li><a href="">artestudio@photo.com</a></li>
-            <li><a href=""></a> +00 323 986745532</li>
+            <li><a href="" class="ttl-xs">artestudio@photo.com</a></li>
+            <li><a href="" class="ttl-xs"></a> +00 323 986745532</li>
         </ul>
     </div>
 
