--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
 
         <p class="ttl-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Dicta illum omnis sint cupiditate nostrum beatae ex, 
-            sapiente dolore exercitationem nulla.</p>
+            sapiente dolore exercitationem nulla.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Dicta illum omnis sint cupiditate nostrum beatae ex, 
+            sapiente dolore exercitationem nulla</p>
         <p class="ttl-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Dicta illum omnis sint cupiditate nostrum beatae ex, 
+            sapiente dolore exercitationem nulla.Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Dicta illum omnis sint cupiditate nostrum beatae ex, 
             sapiente dolore exercitationem nulla.</p>
         <p class="ttl-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -74,13 +79,15 @@
     <div id="botones" class="bg">
         <h2 class="ttl-xm">Contáctanos</h2>
         <ul class="boton">
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-
-            <li><a href="" class="ttl-xs">artestudio@photo.com</a></li>
-            <li><a href="" class="ttl-xs"></a> +00 323 986745532</li>
+            <li>
+                <a href=""><span class="material-icons-outlined">thumb_up</span></a></li>
+            <li><a href=""><span class="material-icons-outlined">photo_camera</span></a></li>
+            <li><a href=""><span class="material-icons-outlined">smart_display</span></a></li>
+            <li><a href=""><span class="material-icons-outlined">groups</span></a></li>
+        </ul>
+        <ul class="boton">
+            <li><a href="" class="ttl-xs"><span class="material-icons-outlined">email</span>artestudio@photo.com</a></li>
+            <li><a href="" class="ttl-xs"><span class="material-icons-outlined"> whatsapp</span>+00 323 986745532</a></li>
         </ul>
     </div>
 
